--- a/job-tracker/package.json
+++ b/job-tracker/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "lucide-react": "^0.544.0",
-    "xlsx": "^0.18.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "recharts": "^3.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
